# v2ray-finder

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  LICENSE  MANIFEST.in  README.de.md  README.en.md  README.fa.md  README.md  cli_entry.py  cli_rich_entry.py  pyproject.toml  servers
.github/workflows/: auto-format.yml  lint.yml  publish.yml  tests.yml
docs/: INTERRUPTION_GUIDE.md
src/v2ray_finder/: __init__.py  async_fetcher.py  cache.py  cli.py  cli_rich.py  core.py  exceptions.py  health_checker.py  result.py
src/v2ray_finder/gui/: main_window.py
tests/: test_async_fetcher.py  test_cache.py  test_cli.py  test_cli_rich.py  test_core.py  test_error_handling.py  test_exceptions.py  test_get_repo_files.py  test_health_basic.py  test_health_checker.py  test_imports.py  test_integration.py  test_result.py  test_servers_from_sources.py  test_servers_with_health.py  test_stop_mechanism.py  test_streaming_pipeline.py
